--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPzx/bsJl4mvSHXznGnFVvr",
+      "authorship_tag": "ABX9TyOGB0me8MLQutF9XPpjSUSr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "5a335483-c20f-40f5-d434-a644bbc4d233"
+        "outputId": "d3868b95-2a0b-40f9-c368-cb2e6ef973e5"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-654366e8-7de3-4ad5-9635-b58bde701bf0\">\n",
+              "  <div id=\"df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-654366e8-7de3-4ad5-9635-b58bde701bf0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-654366e8-7de3-4ad5-9635-b58bde701bf0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-654366e8-7de3-4ad5-9635-b58bde701bf0');\n",
+              "          const element = document.querySelector('#df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +356,7 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "9f762602-d02b-4950-85a6-81f252401a93"
+        "outputId": "82c7a339-735a-4b56-fbdb-2e903226aa44"
       },
       "execution_count": 4,
       "outputs": [
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-489bf493-90e4-4942-b57e-1a820880caf2\">\n",
+              "  <div id=\"df-910edb6d-4c01-434b-9eb2-b44074e72863\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-489bf493-90e4-4942-b57e-1a820880caf2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-910edb6d-4c01-434b-9eb2-b44074e72863')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-489bf493-90e4-4942-b57e-1a820880caf2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-910edb6d-4c01-434b-9eb2-b44074e72863 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-489bf493-90e4-4942-b57e-1a820880caf2');\n",
+              "          const element = document.querySelector('#df-910edb6d-4c01-434b-9eb2-b44074e72863');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -661,7 +661,7 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "8d44eca5-dea6-4a91-b63d-5557321e094f"
+        "outputId": "6ba3bbbf-b2ad-4f9b-fa24-d6a30f96297e"
       },
       "execution_count": 5,
       "outputs": [
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42\">\n",
+              "  <div id=\"df-59762eb8-82fc-4403-a17a-67cb7685e535\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-59762eb8-82fc-4403-a17a-67cb7685e535')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42 button.colab-df-convert');\n",
+              "          document.querySelector('#df-59762eb8-82fc-4403-a17a-67cb7685e535 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42');\n",
+              "          const element = document.querySelector('#df-59762eb8-82fc-4403-a17a-67cb7685e535');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1107,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "64a87801-0533-499d-e01c-db65b88d746c"
+        "outputId": "582c6cad-ef70-40f8-fddb-ae2f89f8d962"
       },
       "execution_count": 6,
       "outputs": [
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "3eab7f91-4c52-484c-c40c-ef23b25db096",
+        "outputId": "1c96013a-0df7-41d2-f129-a703f239da35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1160,7 +1160,7 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "85f53ae5-2d9a-40c6-efaf-fd473d06e49f"
+        "outputId": "7fb5d60b-4041-4d8a-866a-1de61d338f6c"
       },
       "execution_count": 8,
       "outputs": [
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a5a5d945-2d81-488b-b0b5-d0bc52a00367\">\n",
+              "  <div id=\"df-12be7d2e-267a-4f30-a759-9ec8fd69645c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5a5d945-2d81-488b-b0b5-d0bc52a00367')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12be7d2e-267a-4f30-a759-9ec8fd69645c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a5a5d945-2d81-488b-b0b5-d0bc52a00367 button.colab-df-convert');\n",
+              "          document.querySelector('#df-12be7d2e-267a-4f30-a759-9ec8fd69645c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a5a5d945-2d81-488b-b0b5-d0bc52a00367');\n",
+              "          const element = document.querySelector('#df-12be7d2e-267a-4f30-a759-9ec8fd69645c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1785,7 +1785,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "a7e3230b-9b69-4a4e-8822-1588589ea8dc"
+        "outputId": "08a5b32c-f4f3-456e-9f13-634ebcc21c5c"
       },
       "execution_count": 9,
       "outputs": [
@@ -1808,7 +1808,7 @@
       ],
       "metadata": {
         "id": "H-_DZevzhhgt",
-        "outputId": "0a50ec7c-10e3-4a52-bc08-3f4d209cbeb0",
+        "outputId": "16abbaff-e122-4f95-b51d-b01568739f03",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1837,7 +1837,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gd1mF7bMn9xB",
-        "outputId": "8eb5b8c0-db06-4bdf-e042-c1c92505cb40"
+        "outputId": "328b6078-b870-4fd5-bcbb-1c797888efa0"
       },
       "execution_count": 11,
       "outputs": [
@@ -1863,7 +1863,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NxvYOdPaymCH",
-        "outputId": "03a491c2-d47a-4a01-f532-3607892b5f57"
+        "outputId": "cae0918e-3861-4b4d-be54-ae09bf6c8835"
       },
       "execution_count": 12,
       "outputs": [
@@ -1889,7 +1889,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qdeEbEAV2wmK",
-        "outputId": "9d6d566b-916a-4e8f-9cee-442f76769d50"
+        "outputId": "fc404e0f-65d5-4ccd-fbe5-6820eafe91d5"
       },
       "execution_count": 13,
       "outputs": [
@@ -1902,6 +1902,32 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 400 & neighbourhood == \"Zuid\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FR3_rGOFF5XZ",
+        "outputId": "7f7fb625-9579-4e1d-9996-438956e8ab65"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(17, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
