--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGB0me8MLQutF9XPpjSUSr",
+      "authorship_tag": "ABX9TyPelF8NN5yPKyHr0sLbkeGH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "d3868b95-2a0b-40f9-c368-cb2e6ef973e5"
+        "outputId": "a1f032ff-a077-49dd-e549-4b2ed7a65cb1"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95\">\n",
+              "  <div id=\"df-ec939c77-b7e4-43c4-adb0-ab3078580f17\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec939c77-b7e4-43c4-adb0-ab3078580f17')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ec939c77-b7e4-43c4-adb0-ab3078580f17 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fb39fdd0-ec3d-41d6-8ddf-9d5e312b9b95');\n",
+              "          const element = document.querySelector('#df-ec939c77-b7e4-43c4-adb0-ab3078580f17');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +356,7 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "82c7a339-735a-4b56-fbdb-2e903226aa44"
+        "outputId": "0ade6551-90ce-44b1-eeae-2c898dff17f6"
       },
       "execution_count": 4,
       "outputs": [
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-910edb6d-4c01-434b-9eb2-b44074e72863\">\n",
+              "  <div id=\"df-76364811-a42b-491b-aaad-2dacca8a7352\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-910edb6d-4c01-434b-9eb2-b44074e72863')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-76364811-a42b-491b-aaad-2dacca8a7352')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-910edb6d-4c01-434b-9eb2-b44074e72863 button.colab-df-convert');\n",
+              "          document.querySelector('#df-76364811-a42b-491b-aaad-2dacca8a7352 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-910edb6d-4c01-434b-9eb2-b44074e72863');\n",
+              "          const element = document.querySelector('#df-76364811-a42b-491b-aaad-2dacca8a7352');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -661,7 +661,7 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "6ba3bbbf-b2ad-4f9b-fa24-d6a30f96297e"
+        "outputId": "4b9103f3-2f8a-4b4d-9d6e-4b150c68e83f"
       },
       "execution_count": 5,
       "outputs": [
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-59762eb8-82fc-4403-a17a-67cb7685e535\">\n",
+              "  <div id=\"df-a318e738-07c8-4806-922b-5e7fb461f3d5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-59762eb8-82fc-4403-a17a-67cb7685e535')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a318e738-07c8-4806-922b-5e7fb461f3d5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-59762eb8-82fc-4403-a17a-67cb7685e535 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a318e738-07c8-4806-922b-5e7fb461f3d5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-59762eb8-82fc-4403-a17a-67cb7685e535');\n",
+              "          const element = document.querySelector('#df-a318e738-07c8-4806-922b-5e7fb461f3d5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1107,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "582c6cad-ef70-40f8-fddb-ae2f89f8d962"
+        "outputId": "ef6a22bb-f52d-4753-9fb8-8722f345dd8b"
       },
       "execution_count": 6,
       "outputs": [
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "1c96013a-0df7-41d2-f129-a703f239da35",
+        "outputId": "a66de264-48f3-487a-d7e7-847d3df9cb68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1160,7 +1160,7 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "7fb5d60b-4041-4d8a-866a-1de61d338f6c"
+        "outputId": "0f3a281a-73be-4ccd-a2fa-b0d4075e5f71"
       },
       "execution_count": 8,
       "outputs": [
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-12be7d2e-267a-4f30-a759-9ec8fd69645c\">\n",
+              "  <div id=\"df-143fe9e9-814f-40cb-a142-03a1377577b3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12be7d2e-267a-4f30-a759-9ec8fd69645c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-143fe9e9-814f-40cb-a142-03a1377577b3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-12be7d2e-267a-4f30-a759-9ec8fd69645c button.colab-df-convert');\n",
+              "          document.querySelector('#df-143fe9e9-814f-40cb-a142-03a1377577b3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-12be7d2e-267a-4f30-a759-9ec8fd69645c');\n",
+              "          const element = document.querySelector('#df-143fe9e9-814f-40cb-a142-03a1377577b3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1785,7 +1785,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "08a5b32c-f4f3-456e-9f13-634ebcc21c5c"
+        "outputId": "dc2dc232-c1ad-47bd-869d-77c13c3904e8"
       },
       "execution_count": 9,
       "outputs": [
@@ -1808,7 +1808,7 @@
       ],
       "metadata": {
         "id": "H-_DZevzhhgt",
-        "outputId": "16abbaff-e122-4f95-b51d-b01568739f03",
+        "outputId": "dcab0c10-bc77-4975-eed8-3973893979e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1837,7 +1837,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gd1mF7bMn9xB",
-        "outputId": "328b6078-b870-4fd5-bcbb-1c797888efa0"
+        "outputId": "e6d55bc2-f247-4b58-c86a-3701b517a8a4"
       },
       "execution_count": 11,
       "outputs": [
@@ -1863,7 +1863,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NxvYOdPaymCH",
-        "outputId": "cae0918e-3861-4b4d-be54-ae09bf6c8835"
+        "outputId": "b77f25a2-8dcf-4dc7-95f3-27ad2e13dc47"
       },
       "execution_count": 12,
       "outputs": [
@@ -1889,7 +1889,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qdeEbEAV2wmK",
-        "outputId": "fc404e0f-65d5-4ccd-fbe5-6820eafe91d5"
+        "outputId": "afb8a9c7-c116-4cb4-b1b7-d46298e544f6"
       },
       "execution_count": 13,
       "outputs": [
@@ -1908,14 +1908,40 @@
     {
       "cell_type": "code",
       "source": [
-        "df.query('price > 400 & neighbourhood == \"Zuid\"').shape"
+        "df.query('price > 300 & neighbourhood == \"Zuid\" & room_type == \"Private room\"').shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FR3_rGOFF5XZ",
-        "outputId": "7f7fb625-9579-4e1d-9996-438956e8ab65"
+        "outputId": "4644092d-df08-41e4-f4f1-b3b70aeef5e3"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 400 & neighbourhood == \"Zuid\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w3ZOHuJ1Mnbm",
+        "outputId": "ce25fbcc-edc7-4fe1-f734-731106e55d3f"
       },
       "execution_count": 15,
       "outputs": [
